syntax = "proto3";
package protos.playbooks;

import "google/protobuf/wrappers.proto";
import "google/protobuf/struct.proto";

import "protos/base.proto";
import "protos/playbooks/playbook.proto";
import "protos/playbooks/intelligence_layer/interpreter.proto";
import "protos/playbooks/playbook_commons.proto";
import "protos/playbooks/source_task_definitions/lambda_function_task.proto";


message RunPlaybookTaskRequest {
  Meta meta = 1;
  google.protobuf.Struct global_variable_set = 2;
  PlaybookTask playbook_task = 3;
}

message RunPlaybookTaskResponse {
  Meta meta = 1;
  google.protobuf.BoolValue success = 2;
  Message message = 3;
  PlaybookTaskExecutionLog playbook_task_execution_log = 4;
}